# chance-encounters

./: .gitignore  Cargo.toml  Makefile.toml  README.md  chance-encounters-1519a7492b746f49_bg.wasm  chance-encounters-1ab110de20029800.js  chance-encounters-6148cab848287360_bg.wasm  chance-encounters-ec2100a9113bd60e.js  chance-encounters-ec2100a9113bd60e_bg.wasm  index.html  tailwind-181ee3752df72db2.css  tailwind-3fb8836ed8ef7ddc.css  tailwind-a04e9ec5583fb1ee.css  tailwind.config.js
release/: chance-encounters-1519a7492b746f49.js  chance-encounters-1ab110de20029800_bg.wasm  chance-encounters-6148cab848287360.js  index.html  tailwind-56f35bdbaffa17a7.css
src/: app.rs  compute.rs  errors.rs  main.rs  model.rs
src/compute/: mod.rs  rtree.rs  spacetime.rs
src/decoders/: errors.rs  gpx.rs  json.rs  mod.rs
src/utils/: errors.rs  fileutils.rs  mod.rs  utils.rs
