[package]
name = "chance-encounters"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.12", features = ["csr"] }
serde_json = "1.0.117"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.21"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["File", "FileList", "FileReader", "Blob"] }
chrono = "0.4.38"
serde = "1.0.203"
quick-xml = { version = "0.35.0", features = ["serialize"] }